fix: add !important to text alignment utilities for consistency

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,15 +75,15 @@ body.home {
 
 /* --- utils --- */
 .u-txt-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u-txt-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .u-txt-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .u-txt-smaller {
