--- a/static/sass/base/_utils.scss
+++ b/static/sass/base/_utils.scss
@@ -1,15 +1,15 @@
 /* --- utils --- */
 
 .u-txt-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u-txt-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .u-txt-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .u-txt-smaller {
